// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack accepts custom className on child items 1`] = `
<div
  className=

      {
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        flex-shrink: 0;
        margin-bottom: 0px;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:last-child {
        margin-bottom: 0px;
      }
>
  <span
    className=
        ms-StackItem
        {
          background: red;
          flex-shrink: 0 !important;
        }
  >
    Item 1
  </span>
  <div
    className=

        {
          background: red;
        }
  >
    Item 2
  </div>
</div>
`;

exports[`Stack renders Stack with StackItems correctly 1`] = `
<div
  className=

      {
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        flex-shrink: 0;
        margin-bottom: 0px;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:last-child {
        margin-bottom: 0px;
      }
>
  <span
    className=
        ms-StackItem
        {
          flex-shrink: 0 !important;
        }
  >
    Item 1
  </span>
  <span
    className=
        ms-StackItem
        {
          flex-shrink: 0 !important;
        }
  >
    Item 2
  </span>
</div>
`;

exports[`Stack renders Stack with a gap correctly 1`] = `
<div
  className=

      {
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        flex-shrink: 0;
        margin-bottom: 0px;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:last-child {
        margin-bottom: 0px;
      }
>
  <span
    className=
        ms-StackItem
        {
          flex-shrink: 0 !important;
        }
  >
    Item 1
  </span>
  <span
    className=
        ms-StackItem
        {
          flex-shrink: 0 !important;
        }
  >
    Item 2
  </span>
</div>
`;

exports[`Stack renders Stack with grow correctly 1`] = `
<div
  className=

      {
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        flex-shrink: 0;
        margin-bottom: 0px;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:last-child {
        margin-bottom: 0px;
      }
>
  <div
    className=

        {
          box-sizing: border-box;
          display: flex;
          flex-direction: column;
          flex-grow: 5;
          flex-wrap: nowrap;
          height: auto;
          overflow: hidden;
          width: auto;
        }
        & > * {
          flex-shrink: 0;
          margin-bottom: 0px;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
        & > *:last-child {
          margin-bottom: 0px;
        }
  >
    Item 1
  </div>
  <div
    className=

        {
          box-sizing: border-box;
          display: flex;
          flex-direction: column;
          flex-grow: 2;
          flex-wrap: nowrap;
          height: auto;
          overflow: hidden;
          width: auto;
        }
        & > * {
          flex-shrink: 0;
          margin-bottom: 0px;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
        & > *:last-child {
          margin-bottom: 0px;
        }
  >
    Item 2
  </div>
  <div
    className=

        {
          box-sizing: border-box;
          display: flex;
          flex-direction: column;
          flex-grow: 1;
          flex-wrap: nowrap;
          height: auto;
          overflow: hidden;
          width: auto;
        }
        & > * {
          flex-shrink: 0;
          margin-bottom: 0px;
          text-overflow: ellipsis;
          white-space: nowrap;
        }
        & > *:last-child {
          margin-bottom: 0px;
        }
  >
    Item 3
  </div>
</div>
`;

exports[`Stack renders Stack with shrinking StackItems correctly 1`] = `
<div
  className=

      {
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        flex-shrink: 1;
        margin-bottom: 0px;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:last-child {
        margin-bottom: 0px;
      }
>
  <span
    className=
        ms-StackItem

  >
    Item 1
  </span>
  <span
    className=
        ms-StackItem

  >
    Item 2
  </span>
</div>
`;

exports[`Stack renders Stack with vertical and horizontal alignment correctly 1`] = `
<div
  className=

      {
        align-items: flex-start;
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        height: auto;
        justify-content: flex-end;
        width: auto;
      }
      & > * {
        flex-shrink: 0;
        margin-bottom: 0px;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:last-child {
        margin-bottom: 0px;
      }
>
  <div>
    Item 1
  </div>
  <div>
    Item 2
  </div>
</div>
`;

exports[`Stack renders Stack with vertical and horizontal fill correctly 1`] = `
<div
  className=

      {
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        height: 100%;
        width: 100%;
      }
      & > * {
        flex-shrink: 0;
        margin-bottom: 0px;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:last-child {
        margin-bottom: 0px;
      }
>
  <div>
    Item 1
  </div>
  <div>
    Item 2
  </div>
</div>
`;

exports[`Stack renders horizontal Stack correctly 1`] = `
<div
  className=

      {
        box-sizing: border-box;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        flex-shrink: 0;
        margin-right: 0px;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:last-child {
        margin-right: 0px;
      }
>
  <div>
    Item 1
  </div>
  <div>
    Item 2
  </div>
</div>
`;

exports[`Stack renders vertical Stack correctly 1`] = `
<div
  className=

      {
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        flex-shrink: 0;
        margin-bottom: 0px;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:last-child {
        margin-bottom: 0px;
      }
>
  <div>
    Item 1
  </div>
  <div>
    Item 2
  </div>
</div>
`;
